tests/fixtures/invalid/round_none_list.py
# Cannot call round() with None, List[int]
x = round(None, [1, 2, 3])
